--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,15 @@ dependencies:
   intl: ^0.17.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/ic_launcher.png"
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
