--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.login_bank_flow">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="login_bank_flow"
         android:icon="@mipmap/launcher_icon">
