--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   get: ^4.3.4
   intl: ^0.17.0
+  mask_text_input_formatter: ^2.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.1
